// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bitcoin Resolvers getBitcoinFees failure 1`] = `
Object {
  "data": Object {
    "getBitcoinFees": null,
  },
  "errors": Array [
    [GraphQLError: Problem getting Bitcoin fees.],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Bitcoin Resolvers getBitcoinFees success 1`] = `
Object {
  "data": Object {
    "getBitcoinFees": Object {
      "fast": 3,
      "halfHour": 2,
      "hour": 1,
      "minimum": 5,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Bitcoin Resolvers getBitcoinPrice failure 1`] = `
Object {
  "data": Object {
    "getBitcoinPrice": null,
  },
  "errors": Array [
    [GraphQLError: Problem getting Bitcoin price.],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Bitcoin Resolvers getBitcoinPrice success 1`] = `
Object {
  "data": Object {
    "getBitcoinPrice": "{\\"price\\":\\"price\\"}",
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
